--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "material-icons": "^1.10.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-pdf": "^5.7.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
