--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "material-icons": "^1.10.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-jwt": "^1.1.4",
     "react-pdf": "^5.7.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
