--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url= jdbc:postgresql://localhost:5432/project
 spring.datasource.username= postgres
-spring.datasource.password= admin
+spring.datasource.password= ArcherJarno
 spring.jpa.show-sql=true
 
 
