--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,17 +7,20 @@
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^5.0.0-beta.5",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^4.11.4",
     "@mui/icons-material": "^5.4.2",
     "@mui/material": "^5.4.1",
     "@mui/styled-engine-sc": "^5.4.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@unicef/material-ui-currency-textfield": "^0.8.6",
     "axios": "^0.26.0",
     "material-icons": "^1.10.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-jwt": "^1.1.4",
+    "react-number-format": "^4.9.1",
     "react-pdf": "^5.7.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
