--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,12 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "material-icons": "^1.10.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-jwt": "^1.1.4",
-    "react-pdf": "^5.7.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-validation": "^3.0.7",
