contract backend af, nu gewoon testen hoe het er uit ziet in de frontend

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.datasource.url= jdbc:postgresql://localhost:5432/project
 spring.datasource.username= postgres
 spring.datasource.password= admin
+
+
+spring.jpa.database= postgresql
 spring.jpa.show-sql=true
 
 
@@ -11,3 +14,4 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto= update
 spring.jackson.serialization.fail-on-empty-beans=false
+
