onze security was mehhhhh, nu heb ik het goed gemaakt :)

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -15,4 +15,5 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto= update
 spring.jackson.serialization.fail-on-empty-beans=false
 spring.servlet.multipart.enabled=true
+server.servlet.session.tracking-modes=cookie
 
